# stg-8nn-scaffold

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists-app.txt  CMakeLists-bsp.txt  CMakeLists-libcanard.txt  CMakeLists-libopencm3.txt  CMakeLists-qpc.txt  CMakeLists-stm32cube.txt  CMakeLists.txt  CMakeLists_app.txt  CMakeLists_bsp.txt  CMakeLists_bsp_stg.txt  CMakeLists_bsp_tester.txt  CMakeLists_cmsis5.txt  CMakeLists_libcanard.txt  CMakeLists_qpc.txt  CMakeLists_scaffold.txt  CMakeLists_scaffold.txt.in  CMakeLists_startup.txt  CMakeLists_stm32cube.txt  CMakeLists_uavcan_dsdl.txt  COPYING  COPYING.BSD-new  README.md  appveyor.yml  arm-clang-toolchain-macos.cmake  arm-clang-toolchain.cmake  arm-gcc-toolchain.cmake  gcc_arm.ld  sonar-project.properties  stm32f091xc-toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json
app/: app.c  app.h  app.qm  app_signals.h  blinky.c  blinky.h  led.c  led.h  main.c  main.h  uavcan_node.c  uavcan_node.h
app/led/: README.md  led.c  led.h  led_ao.c  led_ao.h  led_ao_private.h
app/uavcan_node/: README.md  uavcan_node.c  uavcan_node.h  uavcan_node_ao.c  uavcan_node_ao.h  uavcan_node_ao_private.h  uavcan_node_callbacks.c  uavcan_node_callbacks.h  uavcan_node_handlers.c  uavcan_node_handlers.h  uavcan_node_helpers.c  uavcan_node_helpers.h
bsp/: README.md  bsp.c  bsp.h  bsp_can.c  bsp_hal.c  bsp_qpc.c  stg_850.c  stg_850.h
bsp/common/include/: bsp.h  bsp_canard_common.h  bsp_qpc.h  bsp_uavcan_constants.h  canard_build_config.h
bsp/common/src/: bsp_canard_common.c  bsp_common.c
bsp/include/: bsp.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
bsp/include/bsp/: adc.h  bsp_qpc.h  can.h  error_handler.h  gpio.h  i2c.h  irs_pri.h  iwdg.h  pinout.h  rtc.h  tim.h  usart.h
bsp/src/: adc.c  bsp.c  bsp_qpc.c  can.c  gpio.c  i2c.c  iwdg.c  rtc.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  tim.c  usart.c
bsp/stg/include/: bsp_clock.h  bsp_isr_cec_can.h  bsp_isr_hardfault.h  bsp_isr_priorities.h  bsp_isr_svc.h  bsp_isr_systick.h  bsp_isr_usart3_8.h  bsp_mx_adc.h  bsp_mx_can.h  bsp_mx_gpio.h  bsp_mx_i2c.h  bsp_mx_iwdg.h  bsp_mx_rtc.h  bsp_mx_timer.h  bsp_mx_usart.h  bsp_pinout.h  bsp_specific.h  can.h  gpio.h  stm32_assert.h  stm32f0xx_hal_conf.h
bsp/stg/src/: bsp.c  bsp_can.c  bsp_canard.c  bsp_clock.c  bsp_isr_cec_can.c  bsp_isr_hardfault.c  bsp_isr_svc.c  bsp_isr_systick.c  bsp_isr_usart3_8.c  bsp_mx_adc.c  bsp_mx_can.c  bsp_mx_gpio.c  bsp_mx_i2c.c  bsp_mx_iwdg.c  bsp_mx_rtc.c  bsp_mx_timer.c  bsp_mx_usart.c  bsp_qpc.c  can.c  gpio.c  rtc.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
bsp/tester/include/: bsp_specific.h
bsp/tester/src/: bsp.c  bsp_can.c  bsp_canard.c  bsp_qpc.c
bsp_stg/850/include/: bsp_pinout.h  tim.h  usart.h
bsp_stg/850/src/: adc.c  bsp.c  gpio.c  tim.c  usart.c
bsp_stg/856/include/: bsp_pinout.h  tim.h  usart.h
bsp_stg/856/src/: adc.c  bsp.c  gpio.c  tim.c  usart.c
bsp_stg/common/include/: adc.h  bsp.h  bsp_mx.h  bsp_qpc.h  can.h  gpio.h  i2c.h  iwdg.h  stm32_assert.h  stm32f0xx_it.h
bsp_stg/common/src/: adc.c  bsp_clock.c  bsp_mx.c  can.c  iwdg.c  stm32f0xx_it.c  tim.c  usart.c
bsp_stg/include/: bsp.h  bsp_clock.h  bsp_mx.h  rtc.h  stm32f0xx_hal_conf.h  tim.h  usart.h
bsp_stg/src/: bsp.c  gpio.c  i2c.c  stm32f0xx_it.c
bsp_tester/include/: bsp.h
bsp_tester/src/: bsp.c  bsp_qpc.c
can/: canard_build_config.h
ci/: Dockerfile  build-gcc.sh  test-cppcheck.sh
ci/base/: Dockerfile
ci/scripts/: build-clang.sh  build-gcc.sh  install-cppcheck.sh  install-gcc-toolchain.sh  test-cppcheck.sh  test-sonarcloud.sh
dependencies/dsdl_compiler/: libcanard_dsdlc
dependencies/stm32cube/: README.md
dependencies/stm32cube/gnu/: STM32F091CCUx_FLASH.ld  startup_stm32f091xc.c  startup_stm32f091xc.s
dependencies/stm32cube/hal/include/: stm32f0xx_hal_conf.h  stm32f0xx_hal_def.h
doc/: CAN.md  DEBUGGER.md  REFERENCES.md
doc/statecharts/: README.md  led.smcat  uavcan_node.smcat
openocd/: stm32f0x-stlinkv2.cfg  stm32f0x-utils.cfg
override/dependencies/libopencm3/scripts/: irq2nvic_h
override/dependencies/qpc/ports/arm-cm/qk/armclang/: qf_port.h  qk_port.c
override/dependencies/qpc/ports/arm-cm/qk/gnu/: qf_port.h  qk_port.c
startup/: STM32F091CCUx_1.ld  STM32F091CCUx_2.ld  STM32F091CCUx_clang.ld  STM32F091CCUx_gcc.ld  startup_stm32f091xc.c  startup_stm32f091xc.s
stm32cubemx/: README.md  STG-850.ioc  STG-856.ioc
